1. Shrinking animation is decided by whether the image container can be seen on the screen; 2. Add English comments; 3. Other optimizing;

--- a/ZJPhotoBrowser/Base.lproj/Main.storyboard
+++ b/ZJPhotoBrowser/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="342" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="PhotoBrowserDemo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Jhj-Ok-ZUS">
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="TableViewDemo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Jhj-Ok-ZUS">
                                                     <rect key="frame" x="15" y="0.0" width="325" height="43.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
